<resources>
    <string name="app_name">Girl\'s flu</string>
    <string name="remedie">During menstruation, the muscles of the uterus contract(tighten) to help the body remove the lining of the endometrium.
    this can be quite uncomfartable for certain women. This type of discomfort is called menstrual pains. Menstrual pains can be relieved by light exercise,
        a warm bath, or a pad that produces heat. Theere are certain medications that can relieve pain, but it is best to consult with the doctor.</string>
    <string name="r">Some women have very painful periods that can force them to stay in bed for a couple of days in each cycle.</string>
    <string name="ra">7 Home remedies to relieve menstrual cramps</string>
    <string name="le">An excellent homemade solution for menstrual cramps is the poultice of lavender, because this medicinal plant is stimulant of the peripheral circulation.</string>
    <string name="li">50g of lavender leaves;\n1 Litre of water</string>
    <string name="lp">Place the lavender leaves in the water and let boil. After allowing to cool, remove the leaves and apply them on the abdomen 2 to 3 times a day.</string>
    <string name="me">The tea leaves mango has antispasmodic properties being useful to ease colic.</string>
    <string name="mi">20g of mango leaves;\n
1 liter of boiling water.
</string>
    <string name="mp">Place the ingredients in a pot and boil for 5 minutes. Cover and cool a little, then strain and sweeten with 1 teaspoon of honey, per cup. However,
        this should be added only when the tea is going to be drunk, and not in the whole liter of tea.

        \n\nFor colic to be less intense in a natural way, this tea should be taken 4 times a day, in the two days before the menstruation fall and during the first day
            of menstruation.
</string>
    <string name="ae">The tea of agnus castus or chasteberry has sedative and antispasmodic properties that help to balance the hormonal levels, being effective not only in relieving
    colic, but also other symptoms related to menstruation such as pimples, PMS and irregularities of the menstrual cycle. </string>
    <string name="ai">1 tablespoon of agnus castus;
        \n200 ml of boiling water
</string>
    <string name="ap">Add the ingredients in a pot and let stand for about 15 minutes. Then you should strain and drink 2 to 4 times a day.

        \n\nCare should be taken when administering tea doses, since high doses can cause intestinal problems.
</string>
    <string name="bi">1 tablespoon of basil;\n500 ml of boiling water

</string>
    <string name="bp">Place the ingredients in a pot and boil for a few minutes. Let cool and drink then. You should drink this re for every 6 hours, without sugar, because sugar can worsen menstrual cramps.
</string>
    <string name="mue">A good home remedy to end colic is Artemisia tea, because it has antispasmodic action that reduces pain and abdominal discomfort, caused by intestinal or menstrual cramps.</string>
    <string name="mui">1 tablespoon of mugwort leaves;
        \n1 cup of boiling water

</string>
    <string name="mup">Add the ingredients and let stand for about 5 minutes. Then cover, let cool, strain and drink 2 to 3 cups a day.

        \n\nTo increase the effect of this tea, the woman can place a bag of warm water on the belly and lie on her side.
</string>
    <string name="ge">A good natural solution for menstrual cramps is ginger tea with chamomile. This tea is an effective mixture, because while ginger acts as anti-inflammatory reducing pains,
        chamomile acts as an tranquilizer providing the necessary relaxation during this period of the month.
</string>
    <string name="gi">1 tablespoon of chopped ginger;
        \n1 tablespoon of dried chamomile;
        \n500 ml of water
</string>
    <string name="gp">The ginger root should be boiled in a covered container for about 5 minutes, after the solution is removed from the fire add chamomile.
        The container should be capped again and remain infused for 10 minutes. \nAfter being strained and sweetened with honey, the tea is ready to drink. Drinking 3 cups a day is
        enough to decrease menstrual cramps. </string>
    <string name="ce">The Calendula tea with anise and nutmeg, because they contain several antispasmodic, analgesic, anti-inflammatory and soothing properties that are beneficial to
        regulate menstruation.
</string>
    <string name="ci">1 handful of Calendula flowers;
        \n1 tablespoon nutmeg;
        \n tablespoon of anise;
        \n1 glass of water
</string>
    <string name="cp">Place the ingredients in a pot and boil for 10 minutes. Then turn off the heat, cover the pot and let cool. Next you should strain, sweeten to taste, and drink
        twice a day.
</string>
    <string name="myth1">f you start to hear that your friends have already arrived, you may feel that something is wrong with you. The reality is that the body of each girl is totally different and the same applies in the case of menstruation.
The first menstruation, called menarche, takes place between 8 and 15 years. However, if this does not happen it is considered primary amenorrhea (absence of menstruation), and it is important to consult a gynecologist.
    </string>
    <string name="myth2">If you practice any physical activity or go to the gym every day, your period is not an impediment, just the opposite! With exercise your body produces endorphins, also called happiness hormones, which act as a natural analgesic in your body and help improve your mood.
    Although if you want to rest, it is also valid, you can even do something lighter, such as taking a short walk.</string>
    <string name="myth3">With regard to performing water activities during those days, there are many versions, but one of the most common is that the period is cut off when in contact with water. However, the period is a process that is not controlled by external factors, but by the detachment of the endometrium as a result of hormonal discharge.
Some girls may have the feeling that the period is interrupted, because they are upright or because of the water pressure, however, the flow does not stop and, although the water as such does not represent any danger to your health, it is Its important that you make sure you use the right protection.
    </string>
    <string name="myth4">

Unless you tell them, there is no way for anyone to know that you are in your period. While you may have some symptoms such as acne or swelling, these are only noticeable to you.
In addition, it is important that you affirm that your period is something completely natural and that the most important thing is that you choose what makes you feel comfortable. For example, if you are worried about someone noticing your towel, you can try ultra-thin towels or tampons.
</string>
    <string name="myth5">
Buffers have many advantages, such as staying protected when practicing your favorite sport or swimming in family vacations, but they are an option that still causes many doubts or fears. One of them is that only the biggest girls can use them or they can make them lose their virginity.
Virginity is often associated with the hymen, a very thin and elastic membrane that has perforations in the center in order to allow passage of the flow during the period, but these openings are large enough to insert a tampon. Although it is true that it can break even after a fall, for practicing some sport or for a very abundant menstrual flow.
</string>
    <string name="myth6">
When girls share their experiences with their friends or partners, they tend to compare and can create wrong ideas of what is "normal". In the case of the duration of your period, this can be between 3 and 7 days long, that is, as long as you are in this range you have nothing to worry about.
You should also consider that during the 2 years after your first period you can detect some irregularities, because your hormonal system is not yet fully mature.
</string>
    <string name="myth7">
Another of the most popular beliefs among girls is that for a period to be regular it must arrive on the same date each month. The truth is that each girl has an individual pattern of behavior in regard to their periods. As long as your periods arrive every 21 to 35 days there is nothing to worry about.
Many times what is considered irregular is really only a lack of knowledge about how your menstrual cycles work in particular, so it is advisable to make a record of each one so that you understand how your body works.
</string>
    <string name="myth8">
Although the probability is less, you can continue to ovulate during the days of your period, as well as being more prone to contract sexually transmitted infections. That is why it is advisable that if you have sex during this time, use a barrier method of contraception (condom).
</string>
    <string name="myth9">
If you have symptoms such as fatigue, mood swings or trouble sleeping, they are not in your head! They can be part of Premenstrual Syndrome, a set of symptoms that appear (from 3 to 10 days) before the period, as a consequence of the symptoms. hormonal changes.
It is important that within the record of your period, you also include these discomforts and their intensity.
</string>
    <string name="myth10"><b>
10) </b>There is food that hurts you during your period There is no food or drink that represents a danger to your health if you take it during your period, it is only advisable that you eat healthy and stay hydrated.</string>
    <string name="y71">Combining a forward fold, twist, and side body stretch all in one, Janu Sirsasana (Head-to-Knee Pose) can help calm your mind as well as stretch your body.
        Instead of rounding your back, lengthen your spine and bend from your hip crease. As you fold forward, close your eyes and cultivate a sense of inner peace.
        \n\nIllusions of grandeur can take hold when a desire to get as far as possible into an asana, or pose, takes you past your limits. These are as much asmita, or ego, as
            inability or meekness. In order to keep your ego in line with reality, approach any pose with humility and focus. Stay present, without trying to move too fast. Try to
            experience what you are feeling in your body without getting wrapped up in achieving a goal.
</string>
    <string name="y72">Head-to-Knee Pose improves posture and counteracts the effects of prolonged sitting. It can be helpful for recovery after sports and activities that include
        running. It stretches the back of your body, including your back muscles, and can help relieve low back tightness and low back pain. Also, it can bring calm to the mind and
        help with depression, anxiety, and fatigue.</string>
    <string name="y73">1. Begin in Dandasana (Staff Pose). Bend your right knee and place the sole of your right foot high on your left inner thigh.\n
2. Inhale and lengthen your spine; exhale and take your right hand to the outside of your left thigh and your left hand behind your left hip.\n
3. On an exhalation, bend at your hips and lean forward over your left leg.\n
4. Reach for your left foot. If it is available to you, clasp your left wrist with your right hand.\n
5. Inhale and reach your sternum forward; exhale and revolve your right ribs toward your left knee even more.\n
6. To exit the pose, inhale and lift your chest. Straighten your right leg, returning to Staff Pose.\n
        7. Repeat on the other side.</string>
</resources>