<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".remedies">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Myth"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                >
            </TextView>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="350dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/myth"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1) The first period must reach a certain age:
"
                android:textSize="20dp"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myth1"
                android:textSize="20dp"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2) It is harmful to exercise during your period:
"
                android:textSize="20dp"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myth2"
                android:textSize="20dp"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3) Swimming causes your period to be cut:"
                android:textSize="20dp"
                android:textStyle="bold"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myth3"
                android:textSize="20dp"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4) People are going to realize:"
                android:textSize="20dp"
                android:textStyle="bold"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myth4"
                android:textSize="20dp"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5) The tampons are only for bigger girls:"
                android:textSize="20dp"
                android:textStyle="bold"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myth5"
                android:textSize="20dp"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6) Your period should last a certain time:"
                android:textSize="20dp"
                android:textStyle="bold"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myth6"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7) It is bad that your periods are irregular:"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myth7"
                android:textSize="20dp"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8) You can not get pregnant during your period:"
                android:textSize="20dp"
                android:textStyle="bold"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myth8"
                android:textSize="20dp"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9) Premenstrual Syndrome is not real:"
                android:textSize="20dp"
                android:textStyle="bold"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myth9"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >
            </TextView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myth10"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"

                android:layout_marginBottom="30dp">
            </TextView>



        </LinearLayout>
    </ScrollView>
</LinearLayout>


