<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".remedies">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tea of Mango Leaf"
                android:layout_gravity="center"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me"
                android:textSize="20dp"
                android:justificationMode="inter_word"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ingredients"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mi"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:justificationMode="inter_word"
                android:layout_marginRight="20dp"
                android:textColor="@color/black">
            </TextView>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="350dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/mangoleaf"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Preparation Method"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mp"
                android:layout_marginBottom="30dp"
                android:textSize="20dp"
                android:justificationMode="inter_word"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/black">
            </TextView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>