<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".remedies">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:layout_marginRight="10dp"
                android:text="Head to Knee Forward Bend - Janu Sirsasana"
                android:textSize="30dp"
                android:textStyle="bold"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:text="@string/y71"
                android:textSize="20dp"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:layout_marginRight="20dp"
                android:text="BENEFITS"
                android:textSize="20dp"
                android:textStyle="bold"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:layout_marginRight="20dp"
                android:text="@string/y72"
                android:textSize="20dp"></TextView>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                app:srcCompat="@drawable/y7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:text="Angle Pose"
                android:textSize="20dp"
                android:textStyle="bold"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/y73"
                android:textSize="20dp"></TextView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>